--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "swiper": "^8.4.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
